Add content to footer-contents html

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,3 +1,14 @@
-<p>
-  navigation works!
-</p>
+<div class="navBar">
+  <button>Home</button>
+  <ul>
+    <li><a href="#">SHOP</a></li>
+    <li><a href="#">PRODUCTS</a></li>
+    <li><a href="#">SUPPORT</a></li>
+    <li><a href="#">GAMES</a></li>
+    <li><a href="#">LEGO LIFE</a></li>
+    <li><a href="#">GAMES</a></li>
+    <li><a href="#">FOR KIDS</a></li>
+  </ul>
+  <button>Search</button>
+  <button>Account</button>
+</div>
