combine all index components

--- a/src/app/main-home-component/index/index.component.html
+++ b/src/app/main-home-component/index/index.component.html
@@ -7,8 +7,11 @@
 </head>
 <body>
   <header>
-    
   </header>
   <p>Index works!</p>
+  <app-image-slider></app-image-slider>
+  <app-main-page-content></app-main-page-content>
+  <app-footer-content></app-footer-content>
+
 </body>
 </html>
