--- a/src/app/main-home-component/footer-content/footer-content.component.html
+++ b/src/app/main-home-component/footer-content/footer-content.component.html
@@ -1,8 +1,8 @@
 <div class="footerContainer">
   <div class="siteMap">
-    <ul>
+    <ul class="mainList">
       <li>
-        <ul>Customer Service
+        <ul class="footerList">Customer Service
             <li><a href="#">Building Instructions</a></li>
             <li><a href="#">Replacement Parts</a></li>
             <li><a href="#">Contact Us</a></li>
@@ -12,7 +12,7 @@
         </ul>
       </li>
       <li>
-          <ul>About Us
+          <ul class="footerList">About Us
               <li><a href="#">Responsibility</a></li>
               <li><a href="#">Jobs</a></li>
               <li><a href="#">Legal Information</a></li>
@@ -22,7 +22,7 @@
             </ul>
       </li>
       <li>
-          <ul>Categories
+          <ul class="footerList">Categories
               <li><a href="#">Animals</a></li>
               <li><a href="#">Play Ideas</a></li>
               <li><a href="#">Toy Cars</a></li>
@@ -32,13 +32,13 @@
             </ul>
       </li>
       <li>
-          <ul>Educators
+          <ul class="footerList">Educators
               <li><a href="#">LEGO Education Website</a></li>
               <li><a href="#">LEGO Education Products</a></li>
             </ul>
       </li>
       <li>
-          <ul>Attractions
+          <ul class="footerList">Attractions
               <li><a href="#">LEGO House</a></li>
               <li><a href="#">LEGOLAND Parks</a></li>
               <li><a href="#">LEGOLAND Discovery Centers</a></li>
@@ -46,7 +46,6 @@
       </li>
     </ul>
   </div>
-
   <footer>
     <div class="footerLinks">
       <ul>
