add bootstrap and jquery

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <div class="navBar">
-  <button>Home</button>
+  <button class="btn-danger">Home</button>
   <ul>
     <li><a href="#">SHOP</a></li>
     <li><a href="#">PRODUCTS</a></li>
