--- a/src/app/main-home-component/image-slider/image-slider.component.html
+++ b/src/app/main-home-component/image-slider/image-slider.component.html
@@ -6,13 +6,13 @@
     </ol>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img class="d-block w-100" src="..." alt="First slide">
+        <img class="slideImg d-block w-100" [src]="'./../../../assets/slider-imgs/sliderimg1.jpeg'"alt="First slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="..." alt="Second slide">
+        <img class="slideImg  w-100" [src]="'./../../../assets/slider-imgs/sliderimg2.jpeg'" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="d-block w-100" src="..." alt="Third slide">
+        <img class="slideImg d-block w-100" [src]="'./../../../assets/slider-imgs/sliderimg2.jpeg'" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
