add to navigations css

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <div class="navBar">
-  <button class="btn-danger">Home</button>
+  <button class="homeButton"><a href="#"></a></button>
   <ul>
     <li><a href="#">SHOP</a></li>
     <li><a href="#">PRODUCTS</a></li>
@@ -7,8 +7,8 @@
     <li><a href="#">GAMES</a></li>
     <li><a href="#">LEGO LIFE</a></li>
     <li><a href="#">GAMES</a></li>
-    <li><a href="#">FOR KIDS</a></li>
+    <li><button class="forkidsButton"><a href="#"></a></button></li>
   </ul>
-  <button>Search</button>
-  <button>Account</button>
+  <button class="searchButton"><a href="#"></a></button>
+  <button class="accountButton"><a href="#"></a></button>
 </div>
