--- a/src/app/main-home-component/image-slider/image-slider.component.html
+++ b/src/app/main-home-component/image-slider/image-slider.component.html
@@ -7,12 +7,13 @@
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img class="slideImg d-block w-100" [src]="'./../../../assets/slider-imgs/sliderimg1.jpeg'"alt="First slide">
+        <!-- <button class="btn btn-danger">Shop Now</button> -->
       </div>
       <div class="carousel-item">
         <img class="slideImg  w-100" [src]="'./../../../assets/slider-imgs/sliderimg2.jpeg'" alt="Second slide">
       </div>
       <div class="carousel-item">
-        <img class="slideImg d-block w-100" [src]="'./../../../assets/slider-imgs/sliderimg2.jpeg'" alt="Third slide">
+        <img class="slideImg d-block w-100" [src]="'./../../../assets/slider-imgs/sliderimg3.jpg'" alt="Third slide">
       </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
