--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -2,7 +2,7 @@
   position: absolute;
   display: flex;
   width: 100%;
-  height: 50px;
+  height: 90px;
   top: 0;
   left: 0;
   font-size: 19px;
@@ -10,11 +10,12 @@
   text-transform: uppercase;
   font-family: 'Lato',Arial,sans-serif;
   text-decoration: none;
+  background-color: white;
 }
 
 .navBar ul {
   list-style-type: none;
-  margin: auto;
+  margin: 40px;
   padding: 0;
 }
 
@@ -24,6 +25,44 @@
 }
 
 .navBar a {
+  color: #999;
   margin: 5px;
   -webkit-font-smoothing: antialiased;
+}
+
+.homeButton {
+  width: 50px;
+  height: 50px;
+  margin: 30px;
+  background: none;
+  border: none;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-image: url("./../../assets/icons/legologoicon.png");
+}
+
+.searchButton, .accountButton {
+  width: 45px;
+  height: 45px;
+  margin: 35px auto;
+  background: none;
+  border: none;
+  background-size: cover;
+}
+
+.searchButton {
+  background-image: url("./../../assets/nav/searchbutton.png");
+}
+.accountButton {
+  background-image: url("./../../assets/nav/accountbutton.png")
+}
+
+.forkidsButton {
+  margin-left: 100px;
+  width: 108px;
+  height: 36px;
+  background: none;
+  border: none;
+  background-size: cover;
+  background-image: url("./../../assets/nav/forkidsbutton.png");
 }
