fix footer lists

--- a/src/app/main-home-component/footer-content/footer-content.component.html
+++ b/src/app/main-home-component/footer-content/footer-content.component.html
@@ -47,6 +47,7 @@
     </ul>
   </div>
   <footer>
+    <hr>
     <div class="footerLinks">
       <ul>
           <li><a href="#">Privacy Policy</a></li>
@@ -57,7 +58,7 @@
     </div>
     <div class="terms">
       <p>LEGO, the LEGO logo, the Minifigure, DUPLO, BIONICLE, the FRIENDS logo, the MINIFIGURES logo, MINDSTORMS, NINJAGO, and NEXO KNIGHTS are trademarks of the LEGO Group. ©2019 The LEGO Group.</p>
-      <ul>
+      <ul class="pageEndLinks">
         <li><a href="#">Privacy Policy</a></li>
         <li><a href="#">Cookies</a></li>
       </ul>
