--- a/src/app/main-home-component/footer-content/footer-content.component.css
+++ b/src/app/main-home-component/footer-content/footer-content.component.css
@@ -3,25 +3,55 @@
   height: 500px;
   display: flex;
   flex-wrap: wrap;
-  position: fixed;
-  left: 0;
-  bottom: 0;
+  
+  padding: 5px;
+  clear: all;
+}
+
+.mainList {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.mainList li {
+  display: inline;
+  margin: auto;
+  
 }
 
 .footerList {
   overflow: auto;
+  font-weight: bold;
 }
 
-.footerList li {
-  max-width: 100px;
-}
-
-.mainList {
-    
+.footerList li, a {
+  display: block;
+  color: black;
+  font-weight: normal;
 }
 
 .siteMap {
   width: 100%;
+  height: 300px;
   display: flex;
   flex-wrap: wrap;
+}
+
+.terms {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+p {
+  font-size: 12px;
+}
+
+.pageEndLinks {
+}
+
+.pageEndLinks a{
+  background: red;
+}
+.pageEndLinks li {
+  display: inline;
 }
