--- a/src/app/main-home-component/main-page-content/main-page-content.component.html
+++ b/src/app/main-home-component/main-page-content/main-page-content.component.html
@@ -1,3 +1,10 @@
-<p>
-  main-page-content works!
-</p>
+<div class="shopNow">
+  <img src="./../../../assets/shop-now/shopnow1.png" alt="lego set">
+  <img src="./../../../assets/shop-now/shopnow2.png" alt="lego set">
+  <img src="./../../../assets/shop-now/shopnow3.png" alt="lego set">
+  <img src="./../../../assets/shop-now/shopnow4.png" alt="lego set">
+</div>
+<div class="themes">
+  <h1>Themes</h1>
+  <img src="./../../../assets/themes/theme0.png" alt="Lego themes">
+</div>
