--- a/src/app/main-home-component/footer-content/footer-content.component.html
+++ b/src/app/main-home-component/footer-content/footer-content.component.html
@@ -48,8 +48,8 @@
   </div>
   <footer>
     <hr>
-    <div class="footerLinks">
-      <ul>
+    <div class="policyLinks">
+      <ul class="policyList">
           <li><a href="#">Privacy Policy</a></li>
           <li><a href="#">Cookies</a></li>
           <li><a href="#">Terms of Use</a></li>
@@ -58,10 +58,12 @@
     </div>
     <div class="terms">
       <p>LEGO, the LEGO logo, the Minifigure, DUPLO, BIONICLE, the FRIENDS logo, the MINIFIGURES logo, MINDSTORMS, NINJAGO, and NEXO KNIGHTS are trademarks of the LEGO Group. ©2019 The LEGO Group.</p>
-      <ul class="pageEndLinks">
-        <li><a href="#">Privacy Policy</a></li>
-        <li><a href="#">Cookies</a></li>
-      </ul>
+      <div class="pageEndLinks">
+        <ul>
+          <li><a href="#">Privacy Policy</a></li>
+          <li><a href="#">Cookies</a></li>
+        </ul>
+      </div>
     </div>
   </footer>
 </div>
