--- a/src/app/main-home-component/main-page-content/main-page-content.component.html
+++ b/src/app/main-home-component/main-page-content/main-page-content.component.html
@@ -8,3 +8,29 @@
   <h1>Themes</h1>
   <img src="./../../../assets/themes/theme0.png" alt="Lego themes">
 </div>
+<div class="newSets">
+    <h1>New Sets</h1>
+    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-33" src="./../../../assets/new-sets/set1.png" alt="new set">
+            <img class="d-block w-33" src="./../../../assets/new-sets/set2.png" alt="new set">
+            <img class="d-block w-33" src="./../../../assets/new-sets/set3.png" alt="new set">
+          </div>
+          <div class="carousel-item">
+              <img class="d-block w-33" src="./../../../assets/new-sets/set4.png" alt="new set">
+              <img class="d-block w-33" src="./../../../assets/new-sets/set5.png" alt="new set">
+              <img class="d-block w-33" src="./../../../assets/new-sets/set6.png" alt="new set">
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+      </div>
+      
+  </div>
