--- a/src/app/main-home-component/main-page-content/main-page-content.component.css
+++ b/src/app/main-home-component/main-page-content/main-page-content.component.css
@@ -6,15 +6,15 @@ h1 {
 }
 
  .carousel-item {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  /* display: */
+  /*flex-wrap: wrap;
+  justify-content: center;*/
 }
 
 .play {
   background-image: url("./../../../assets/play/play.png");
   width: 100%;
   height: 400px;
-  background-size: cover;
-  background-repeat: no-repeat;
+  /* background-size: cover;
+  background-repeat: no-repeat; */
 }
