--- a/src/app/main-home-component/main-page-content/main-page-content.component.css
+++ b/src/app/main-home-component/main-page-content/main-page-content.component.css
@@ -5,16 +5,45 @@ h1 {
   font-weight: 100;
 }
 
- .carousel-item {
-  /* display: */
-  /*flex-wrap: wrap;
-  justify-content: center;*/
-}
-
 .play {
   background-image: url("./../../../assets/play/play.png");
   width: 100%;
   height: 400px;
   /* background-size: cover;
   background-repeat: no-repeat; */
+}
+
+.button {
+  z-index: 2;
+}
+
+.viewMore {
+  z-index: 1;
+  width: 70px;
+  height: 50px;
+  margin-right: 5px;
+}
+
+.newSetsContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.newSetsContainer button {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  text-decoration: none;
+  font-size: 12px;
+  width: 90px;
+  background-color: transparent;
+  color: #333333;
+  background: none;
+  border: none;
+
+}
+
+.newSetsContainer:hover {
+  opacity: 50%;
 }
