get stuck on the same error for 3 hours

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -1,6 +1,6 @@
-<div *ngFor="let lego of legos | async">
+<!-- <div *ngFor="let lego of legos | async">
   <h1>{{lego.name}}</h1>
   <h2>{{lego.price}}</h2>
   <button (click)="goToDetailPage(lego)">More Info></button>
 </div>
-<h1>test</h1>
+<h1>test</h1> -->
