--- a/src/app/main-home-component/main-page-content/main-page-content.component.html
+++ b/src/app/main-home-component/main-page-content/main-page-content.component.html
@@ -8,19 +8,26 @@
   <h1>Themes</h1>
   <img src="./../../../assets/themes/theme0.png" alt="Lego themes">
 </div>
+
 <div class="newSets">
-    <h1>New Sets</h1>
+  <div class="newSetsContainer">
+    <h1>New Sets </h1> <button class="viewMore btn btn-primary">See More</button>
+  </div>
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img class="d-block w-33" src="./../../../assets/new-sets/set1.png" alt="new set">
-            <img class="d-block w-33" src="./../../../assets/new-sets/set2.png" alt="new set">
-            <img class="d-block w-33" src="./../../../assets/new-sets/set3.png" alt="new set">
+            <div class="row">
+              <img class="col" src="./../../../assets/new-sets/set1.png" alt="new set">
+              <img class="col" src="./../../../assets/new-sets/set2.png" alt="new set">
+              <img class="col" src="./../../../assets/new-sets/set3.png" alt="new set">
+            </div>
           </div>
           <div class="carousel-item">
-              <img class="d-block w-33" src="./../../../assets/new-sets/set4.png" alt="new set">
-              <img class="d-block w-33" src="./../../../assets/new-sets/set5.png" alt="new set">
-              <img class="d-block w-33" src="./../../../assets/new-sets/set6.png" alt="new set">
+            <div class="row">
+              <img class="col" src="./../../../assets/new-sets/set4.png" alt="new set">
+              <img class="col" src="./../../../assets/new-sets/set5.png" alt="new set">
+              <img class="col" src="./../../../assets/new-sets/set6.png" alt="new set">
+            </div>
           </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
