Add navigation links and fix image-slider overlap

--- a/src/app/main-home-component/image-slider/image-slider.component.html
+++ b/src/app/main-home-component/image-slider/image-slider.component.html
@@ -10,7 +10,7 @@
         <!-- <button class="btn btn-danger">Shop Now</button> -->
       </div>
       <div class="carousel-item">
-        <img class="slideImg  w-100" [src]="'./../../../assets/slider-imgs/sliderimg2.jpeg'" alt="Second slide">
+        <img class="slideImg d-block w-100" [src]="'./../../../assets/slider-imgs/sliderimg2.jpeg'" alt="Second slide">
       </div>
       <div class="carousel-item">
         <img class="slideImg d-block w-100" [src]="'./../../../assets/slider-imgs/sliderimg3.jpg'" alt="Third slide">
