--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <div class="navBar">
-  <button class="homeButton"><a href="#"></a></button>
+  <button class="homeButton"><a routerLink=""></a></button>
   <ul>
-    <li><a href="#">SHOP</a></li>
+    <li><a routerLink="shop">Shop</a></li>
     <li><a href="#">PRODUCTS</a></li>
     <li><a href="#">SUPPORT</a></li>
     <li><a href="#">GAMES</a></li>
