--- a/src/app/main-home-component/image-slider/image-slider.component.css
+++ b/src/app/main-home-component/image-slider/image-slider.component.css
@@ -2,3 +2,12 @@
   width: 100%;
   max-height: 600px;
 }
+
+.carousel-control-prev, .carousel-control-next {
+  margin-top: 5%;
+  position: absolute;
+}
+
+.slideImg.d-block.w-100 {
+  margin-top: 5%;
+}
