Add newest version of firebase and api file

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,5 +1,5 @@
 <div class="navBar">
-  <button class="homeButton"><a routerLink=""></a></button>
+  <a routerLink="/"><button class="homeButton"></button></a>
   <ul>
     <li><a routerLink="shop">Shop</a></li>
     <li><a href="#">PRODUCTS</a></li>
